tests/rustdoc-ui/issue-102467.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102467.rs:7:17
   |
LL |     type A: S<C<X = 0i32> = 34>;
   |                 ^^^^^^^^ associated type not allowed here

error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102467.rs:7:17
   |
LL |     type A: S<C<X = 0i32> = 34>;
   |                 ^^^^^^^^ associated type not allowed here
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0229`.
